Se agrega variable pendiente de pago

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="lista_chicos">Lista de chicos</string>
     <string name="resultado_chico">Resultado chico</string>
     <string name="iniciar_chico">Iniciar chico</string>
+    <string name="pagar">Pagar</string>
 </resources>
