Pantalla lista deudas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="resultado_chico">Resultado chico</string>
     <string name="iniciar_chico">Iniciar chico</string>
     <string name="pagar">Pagar</string>
+    <string name="lista_deudas">Lista de deudas</string>
 </resources>
